Add date pickers

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,9 +24,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.14"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/dateFrom"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.22" />
+            app:layout_constraintVertical_bias="0.087" />
 
         <TextView
             android:id="@+id/dateToLabel"
@@ -35,20 +35,22 @@
             android:text="@string/date_to"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/dateTo"
-            app:layout_constraintHorizontal_bias="0.15"
+            app:layout_constraintHorizontal_bias="0.12"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/dateFromLabel"
-            app:layout_constraintVertical_bias="0.061" />
+            app:layout_constraintVertical_bias="0.063" />
 
         <EditText
             android:id="@+id/dateFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="148dp"
+            android:layout_marginTop="48dp"
             android:ems="10"
+            android:focusable="false"
             android:inputType="date"
+            android:onClick="@{() -> viewModel.onBeginDateClickListener()}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.4"
+            app:layout_constraintHorizontal_bias="0.12"
             app:layout_constraintStart_toEndOf="@+id/dateFromLabel"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -58,24 +60,28 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="date"
+            android:focusable="false"
+            android:onClick="@{() -> viewModel.onEndDateClickListener()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.67"
             app:layout_constraintStart_toEndOf="@+id/dateToLabel"
             app:layout_constraintTop_toBottomOf="@+id/dateFrom"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.025" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="64dp"
-            android:text="@string/get_movies"
             android:onClick="@{() -> viewModel.getMovies()}"
+            android:text="@string/get_movies"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.413" />
 
         <androidx.core.widget.ContentLoadingProgressBar
             android:id="@+id/movies_loader"
