Added Glide and Thumbnail loading with Glide

--- a/app/src/main/res/layout/item_movie_view.xml
+++ b/app/src/main/res/layout/item_movie_view.xml
@@ -34,6 +34,7 @@
                 android:adjustViewBounds="true"
                 android:importantForAccessibility="no"
                 android:scaleType="fitCenter"
+                app:thumbnailUrl="@{viewModel.thumbnailUrl}"
                 android:src="@drawable/ic_image_placeholder" />
 
             <TextView
