Add Select Dates Fragment

--- a/app/src/main/res/layout/fragment_movie_list.xml
+++ b/app/src/main/res/layout/fragment_movie_list.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.pavlekuzevski.moviediscovery.ui.movielist.MovieListViewModel" />
+            type="com.pavlekuzevski.moviediscovery.ui.main.MainViewModel" />
 
     </data>
 
